# infraweave

./: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  plan.rs  utils.rs
cli/src/commands/: auth.rs  claim.rs  deployment.rs  mod.rs  module.rs  project.rs
cli/src/tui/: app.rs
cli/src/tui/renderers/: common.rs
defs/: Cargo.toml
defs/src/: cloudprovider.rs  deployment.rs  event.rs  lib.rs  module.rs
env_aws/: Cargo.toml
env_aws/src/: api.rs  lib.rs  provider.rs
env_azure/src/: api.rs  lib.rs  provider.rs
env_common/: Cargo.toml
env_common/src/: lib.rs
env_common/src/interface/: cloud_handlers.rs  no_cloud_provider.rs
env_common/src/logic/: api_change_record.rs  api_infra.rs  api_module.rs  api_stack.rs  mod.rs
gitops/src/: github.rs
integration-tests/claims/: s3bucket-dev-claim.yaml
integration-tests/stacks/bucketcollection-dev/: bucket1a.yaml  bucket2.yaml
integration-tests/tests/: utils.rs
internal-api/: .env  .env.aws  .env.azure  Cargo.toml  README.md  run-local.sh
internal-api/src/: api_common.rs  aws_handlers.rs  azure_handlers.rs  handlers.rs  http_router.rs  lib.rs  local_setup.rs  main_aws_unified.rs  main_azure_unified.rs  main_local_http.rs  otel_tracing.rs  queries.rs
terraform_runner/src/: terraform.rs
tofu/: Cargo.toml
tofu/src/: main.rs
tofu/tests/: integration_test.rs
utils/: Cargo.toml
utils/src/: file.rs  lib.rs
