[package]
name = "internal-api"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[features]
default = ["aws"]
aws = ["lambda_http", "lambda_runtime", "aws-config", "aws-credential-types", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-sdk-ecs", "aws-sdk-sns", "aws-sdk-cloudwatchlogs", "aws-sdk-sts"]
azure = ["azure_core", "azure_identity", "azure_data_cosmos", "azure_storage_blob", "time", "chrono"]
local = []

[dependencies]
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
env_aws = { path = "../env_aws" }
env_azure = { path = "../env_azure" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.31"
base64 = "0.22"
async-trait = "0.1.50"
cached = { version = "0.46", features = ["async"] }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }
tokio-util = { version = "0.7", features = ["io"] }

# AWS dependencies (optional)
lambda_http = { version = "0.13.0", optional = true }
lambda_runtime = { version = "0.13.0", optional = true }
aws-config = { version = "1.5", features = ["behavior-version-latest"], optional = true }
aws-credential-types = { version = "1.2", optional = true }
aws-sdk-dynamodb = { version = "1.60.0", optional = true }
aws-sdk-s3 = { version = "1.65.0", optional = true }
aws-sdk-ecs = { version = "1.60.0", optional = true }
aws-sdk-sns = { version = "1.60.0", optional = true }
aws-sdk-cloudwatchlogs = { version = "1.60.0", optional = true }
aws-sdk-sts = { version = "1.60.0", optional = true }

# Azure dependencies (optional) - using latest versions
azure_core = { version = "0.30", optional = true }
azure_identity = { version = "0.30", optional = true }
azure_storage = { version = "0.21", optional = true }
azure_storage_blob = { version = "0.7", optional = true }
azure_data_cosmos = { version = "0.29", optional = true }
chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
# tofu = { version = "0.1.0", path = "../tofu" }

[lib]
name = "internal_api"
path = "src/lib.rs"

[[bin]]
name = "internal-api-aws-unified"
path = "src/main_aws_unified.rs"
required-features = ["aws"]

[[bin]]
name = "internal-api-azure-unified"
path = "src/main_azure_unified.rs"
required-features = ["azure"]

[[bin]]
name = "internal-api-local"
path = "src/main_local_http.rs"
